--- a/Stopwatch with Productivity Timer/task/src/main/res/values/strings.xml
+++ b/Stopwatch with Productivity Timer/task/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Stopwatch with Productivity Timer</string>
+    <string name="time">%02d:%02d</string>
+    <string name="_00_00">00:00</string>
 </resources>
